# ndd

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  pre-commit
.github/workflows/: main.yml
cross-crate-demo-problem/: README.md
cross-crate-demo-problem/bin-fat-lto/: Cargo.toml
cross-crate-demo-problem/callee/src/: lib.rs
cross-crate-demo/bin-fat-lto/: literal_str.sh  static_str.sh
cross-crate-demo/callee/: Cargo.toml
cross_crate_demo_bug/: README.md
cross_crate_demo_bug/bin_non_lto/: deduplicated_out.sh  not_deduplicated.sh
cross_crate_demo_bug/callee/src/: lib.rs
cross_crate_demo_fix/callee/src/: lib.rs
cross_crate_shared_scripts/: deduplicated_out.sh  not_deduplicated.sh
cross_crate_shared_src/: const_bytes.rs
demo-fat-lto/: Cargo.toml  literal_str.sh  static_option_u8.sh  static_str.sh
demo-fat-lto/cross-crate/: Cargo.toml
demo-fat-lto/cross-crate/src/: lib.rs
demo-fat-lto/src/: lib.rs
demo_bug/: README.md
demo_bug/callee/: Cargo.toml
demo_bug/callee/src/: lib.rs
demo_bug/non_lto/: dedup_out.sh
demo_fix/callee/: Cargo.toml
demo_fix/callee/src/: lib.rs
demo_fix/fat_lto/: Cargo.toml  non_dedup.sh
demo_shared_scripts/: dedup_out.sh  non_dedup.sh
src/: lib.rs
